# api-cors-lambda-crud-dynamodb

./: .gitignore  cdk.json  package-lock.json  package.json
lambda/: Cargo.toml
lambda/crud-lambda/: Cargo.toml
lambda/crud-lambda/src/: main.rs
lib/: api-cors-lambda-crud-dynamodb-stack.ts
