[workspace]
members = ["crud-lambda"]
resolver = "2"

[workspace.dependencies]
lambda_http = "0.9.2"
lambda_runtime = "0.9.1"
tokio = { version = "1", features = ["macros"] }
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = [
    "env-filter",
    "fmt",
] }
