[package]
name = "crud-lambda"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.1.5"
aws-sdk-dynamodb = "1.14.0"
axum = "0.7.4"
lambda_http = { workspace = true }
lambda_runtime = { workspace = true }
serde_dynamo = { version = "4.2.13", features = ["aws-sdk-dynamodb+1"] }
serde_json = "1.0.113"
tokio = { workspace = true }
tower-http = { version = "0.5.1", features = ["cors"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { version = "1.7.0", features = ["v4"] }
